--- a/Vaccation View/vaccation-ui/src/App.css
+++ b/Vaccation View/vaccation-ui/src/App.css
@@ -192,21 +192,22 @@ input [placeholder="Select date"]{
   font-size: 11px;
   width: 70px;
   height: 33px;
-  margin: 4%;
+  margin: 3%;
 }
 
 .DaysIput{
-  width: 49%;
+  width: 44%;
 }
 
 .BalanceTable{
   border: 1px solid gray;
     font-size: 13px;
     color: gray;
-    width: 25%;
+    width: 45%;
 
     text-align: center;
-    margin-left: 35%;
+    margin-left: 23%;
+    
 }
 
 tr th{
@@ -215,6 +216,10 @@ tr th{
     border: 1px solid gray;
     color: gray;
    
+}
+
+.RemoveBorder{
+border: hidden;
 }
 
 
